--- a/Project-Demarest-main/styles/process.css
+++ b/Project-Demarest-main/styles/process.css
@@ -5,7 +5,7 @@
 .header-init {
     display: flex;
     justify-content: space-between;
-}
+    box-shadow: 0px 4px 5px 0px #0000000F;}
 
 .nav-item {
     color: var(--blue);
@@ -79,23 +79,12 @@
     background-color: white;
     font-size: 14px;
     width: 350px;
-}
-
-.work-in-progress2 {
-    color: var(--blue);
-    padding: 1.5rem;
-    height: 150px;
-    background-color: white;
-    font-size: 14px;
-    width: 350px;
+    box-shadow: 4px 4px 7px 2px #3741511A;
+    border-radius: 4px;
+    
 }
 
 .work-in-progress p {
-    color: var(--grey3);
-    margin-bottom: 0;
-}
-
-.work-in-progress2 p {
     color: var(--grey3);
     margin-bottom: 0;
 }
@@ -126,6 +115,22 @@
     display: flex;
     justify-content: center;
     color: var(--orange);
+}
+
+.work-in-progress2 {
+    color: var(--blue);
+    padding: 1.5rem;
+    height: 150px;
+    background-color: white;
+    font-size: 14px;
+    width: 350px;
+    box-shadow: 4px 4px 7px 2px #3741511A;
+    border-radius: 4px;
+}
+
+.work-in-progress2 p {
+    color: var(--grey3);
+    margin-bottom: 0;
 }
 
 .work-in-progress2 h3 {
@@ -192,6 +197,7 @@
 .newsletter img {
     width: 275px;
     height: 160px;
+    border-radius: 4px;
 }
 
 .newsletter a {
@@ -253,16 +259,19 @@
     font-weight: 500;
     font-style: normal;
     font-size: 15px;
+    width: 100%;
+    height: 40px;
+    gap: 10rem;
     display: flex;
     background-color: var(--grey4);
     color: var(--blue);
     text-align: center;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 40px;
-    gap: 10rem;
-    bottom: 0;
+}
+
+.rodape p{
+    margin: 0 !important;
     cursor: pointer;
 }
 
