--- a/Project-Demarest-main/views/index.html
+++ b/Project-Demarest-main/views/index.html
@@ -93,7 +93,7 @@
           style="text-align: center;margin-top: 0.5rem; color: var(--grey-dark);"> Ver todos</a>
       </div>
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators"> <button type="button" data-bs-target="#carouselExampleIndicators"
+        <div class="carousel-indicators"> <button type="button" data-bs-target="#carou selExampleIndicators"
             data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button> <button type="button"
             data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button> <button
             type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
